testdata/test/resources/com/yafred/asn1/test/should-fail/integer_duplicate_number2.asn
-- FAIL duplicate id

Module DEFINITIONS ::= BEGIN

a INTEGER ::= 2

My-integer ::= INTEGER { un (1), deux (2), trois (a) }


END